k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: desigo
  labels:
    name: desigo
    app: desigo-ecommerce
